Changes by all members of the group: - Bugs fixed - Some changes in Web API - Comments added - README.md updated
